[gd_scene load_steps=3 format=3 uid="uid://bd2scmccookn1"]

[ext_resource type="Script" path="res://menus/instructions.gd" id="1_qfwdo"]
[ext_resource type="Theme" uid="uid://o5p7cglq6qn" path="res://cards/theme_card.tres" id="2_ma2ud"]

[node name="instructions" type="Node2D"]
script = ExtResource("1_qfwdo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.588235)
metadata/_edit_lock_ = true

[node name="pages" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("2_ma2ud")

[node name="page1" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page1"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 75
text = "From the top of your screen you will see Number Requests slide onto the play area."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="pages/page1"]
offset_left = 60.0
offset_top = 495.0
offset_right = 1860.0
offset_bottom = 707.0
theme_override_font_sizes/font_size = 75
text = "Each request will require 1-3 numbers.  Completing requests will give you points."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page2" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page2"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 533.0
theme_override_font_sizes/font_size = 75
text = "To complete a request, either enter the number on the top of the card, or enter a valid number within the range."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page3" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page3"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 75
text = "To find out the range of valid numbers, check the request's description."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page4" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page4"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 533.0
theme_override_font_sizes/font_size = 75
text = "Points obtained from requests will vary depending on the slot amount and how fast you complete the request."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page5" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page5"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 75
text = "Requests only last for a short while, so be sure to complete them.  If you don't, you lose points."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page6" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page6"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 75
text = "To submit your numbers, click the checkmark button on the top right corner."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page7" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page7"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 75
text = "If the slots are not filled, or you submit an invalid number, you will get a strike on that request."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="pages/page7"]
offset_left = 60.0
offset_top = 495.0
offset_right = 1860.0
offset_bottom = 707.0
theme_override_font_sizes/font_size = 75
text = "Three strikes, and the request is failed."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page8" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page8"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 75
text = "Number cards will be given periodically, and you can only hold a certain amount."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="pages/page8"]
offset_left = 60.0
offset_top = 495.0
offset_right = 1860.0
offset_bottom = 707.0
theme_override_font_sizes/font_size = 75
text = "If it looks like you can't hold anymore, consider dragging them into the trash."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page9" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page9"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 75
text = "The game lasts around 2 minutes.  You can see the progress of the round at the bottom of the screen."
horizontal_alignment = 1
autowrap_mode = 2

[node name="page10" type="Node2D" parent="pages"]
visible = false

[node name="Label" type="Label" parent="pages/page10"]
offset_left = 60.0
offset_top = 215.0
offset_right = 1860.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 75
text = "Be sure to read the itch page description in case I add anything new there that I might have missed"
horizontal_alignment = 1
autowrap_mode = 2

[node name="page_changers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_ma2ud")

[node name="left" type="Button" parent="page_changers"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2
offset_left = 20.0
offset_top = 940.0
offset_right = 170.0
offset_bottom = 1060.0
size_flags_horizontal = 6
text = "<<"

[node name="right" type="Button" parent="page_changers"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2
offset_left = 1750.0
offset_top = 940.0
offset_right = 1900.0
offset_bottom = 1060.0
text = ">>"

[node name="exit" type="Button" parent="."]
offset_left = 1776.0
offset_top = 19.0
offset_right = 1901.0
offset_bottom = 144.0
theme = ExtResource("2_ma2ud")
text = "X"

[connection signal="pressed" from="page_changers/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="page_changers/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
